--- a/style.css
+++ b/style.css
@@ -207,9 +207,6 @@ footer a:hover {
   width: 80%;
   margin: auto;
 }
-.submenu_card .row .submenu_trait {
-  width: 30%;
-}
 .submenu_card .row h4 {
   color: #3c1218;
   font-family: "Comic_relief";
